<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="75dp"
                android:layout_height="55dp"
                android:contentDescription="back to main page"
                android:scaleType="centerInside"
                android:src="@drawable/save"/>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/setting_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:text="設定"
                android:textSize="25sp" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_usebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkgray"
                android:text="使用手冊"
                android:textColor="@color/white" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/bg_roll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="roll show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="駕駛模式"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <RadioButton
                        android:id="@+id/照相系統模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="照相系統模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/照相系統模式" />

                    <RadioButton
                        android:id="@+id/照相系統限速模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="照相系統限速模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/照相系統限速模式" />

                    <RadioButton
                        android:id="@+id/安全駕駛限速模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="安全駕駛限速模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/安全駕駛限速模式" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="行車模式"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <RadioButton
                        android:id="@+id/機車模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="機車模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/機車模式" />

                    <RadioButton
                        android:id="@+id/汽車模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="汽車模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/汽車模式" />

                    <RadioButton
                        android:id="@+id/重機模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="重機模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/重機模式" />

                    <RadioButton
                        android:id="@+id/完整模式"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="完整模式" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/完整模式" />

                </RadioGroup>

                <TextView
                    android:id="@+id/text_view6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="速度調整"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup2" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="單位:"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view6" />

                <RadioGroup
                    android:id="@+id/radioGroup3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6">

                    <RadioButton
                        android:id="@+id/公里"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="公里" />

                    <RadioButton
                        android:id="@+id/百分比"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="%" />

                </RadioGroup>

                <TextView
                    android:id="@+id/速度調整的tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="原始GPS速度"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.003"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup3" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="+"
                    app:layout_constraintBottom_toBottomOf="@+id/速度調整的tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/速度調整的tv"
                    app:layout_constraintVertical_bias="0.592" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="-"
                    app:layout_constraintBottom_toBottomOf="@+id/速度調整的tv"
                    app:layout_constraintEnd_toStartOf="@+id/button"
                    app:layout_constraintTop_toTopOf="@+id/速度調整的tv"
                    app:layout_constraintVertical_bias="0.592" />

                <TextView
                    android:id="@+id/textview8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="超速語音警報"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

                <TextView
                    android:id="@+id/textview9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/超速語音警報"
                    app:layout_constraintEnd_toStartOf="@+id/超速語音警報btn"
                    app:layout_constraintHorizontal_bias="0.008"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textview8" />

                <Button
                    android:id="@+id/超速語音警報btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="啟用"
                    app:layout_constraintBottom_toBottomOf="@+id/textview9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textview9" />

                <TextView
                    android:id="@+id/textview10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="連續響聲警告"
                    app:layout_constraintBottom_toBottomOf="@+id/連續響聲設定btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.064"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/超速語音警報btn" />

                <Button
                    android:id="@+id/連續響聲設定btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="關閉"
                    app:layout_constraintEnd_toEndOf="@+id/超速語音警報btn"
                    app:layout_constraintStart_toStartOf="@+id/超速語音警報btn"
                    app:layout_constraintTop_toBottomOf="@+id/超速語音警報btn" />

                <TextView
                    android:id="@+id/textView99"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="版本資訊"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview10" />

                <TextView
                    android:id="@+id/textView100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/版本資訊的詳細資料"
                    android:layout_marginStart="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView99" />

                <Button
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="恢復預設值"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView100" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>